@@ -1,2 +1,2 @@
 # Target: OpenBSD/vax
-TDEPFILES= vax-tdep.o corelow.o
+TDEPFILES= vax-tdep.o vaxobsd-tdep.o corelow.o
